# reflext_framework_chat_test

./: .gitignore  main.py  pyproject.toml  requirements.txt  rxconfig.py
alembic/versions/: 1c2a1c124100_.py  7b6a23ec2ca9_.py  8f3b7e80fc30_.py  fb898a08d24b_.py
reflex_test/: model.py  reflex_test.py
reflex_test/chat/: __init__.py  ai.py  form.py  page.py  state.py
reflex_test/navigation/: __init__.py  routes.py  state.py
reflex_test/pages/: __init__.py  about.py  home.py
reflex_test/ui/: __init__.py  base.py  footer.py  navbar.py
